--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
             <h2 class="section-title">内容</h2>
             <p>window开机时间查看命令：打开powershell输入 (Get-Date) - (Get-CimInstance -ClassName Win32_OperatingSystem).LastBootUpTime</p>
             <p>window在线激活方法：打开powershell 输入 irm https://get.activated.win | iex</p>
+            <p>geek下载：https://memo.8235467.xyz/geek.exe</p>
             
             <h2 class="section-title">未知</h2>
             <div class="features">
