--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
             <p>window开机时间查看命令：打开powershell输入 (Get-Date) - (Get-CimInstance -ClassName Win32_OperatingSystem).LastBootUpTime</p>
             <p>window在线激活方法：打开powershell 输入 irm https://get.activated.win | iex</p>
             <p>geek下载：<a href="https://memo.8235467.xyz/geek.exe" download="geek.exe">点击下载</a></p>
+            <p>一键换源：bash <(curl -sSL https://linuxmirrors.cn/main.sh)</p>
             
             <h2 class="section-title">未知</h2>
             <div class="features">
