--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的内容页面</title>
+    <title>备忘录</title>
     <style>
         * {
             margin: 0;
@@ -205,22 +205,6 @@
                     <i>⚡</i>
                     <h3>测试</h3>
                     <p>测试</p>
-                </div>
-            </div>
-            
-            <h2 class="section-title">图片展示</h2>
-            <div class="image-gallery">
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1501854140801-50d01698950b?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="自然风景">
-                </div>
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="山脉">
-                </div>
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1433086966358-54859d0ed716?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="森林">
-                </div>
-                <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1505142468610-359e7d316be0?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="湖泊">
                 </div>
             </div>
             
